--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ionic/angular": "^4.0.0-beta.2",
     "@ngx-loading-bar/http-client": "^2.1.2",
     "@ngx-loading-bar/router": "^2.1.2",
     "core-js": "^2.5.4",
