--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-loading-bar/router": "^2.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ionicons": "^4.3.0",
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
